# firmware

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
.github/workflows/: build.yml
main/: CMakeLists.txt  I2C_Driver.h  Touch_SPD2010.h  audio.c  audio.h  audio_es8311.c  ble_hid.c  ble_hid.h  board.h  es8311.c  es8311.h  hid_event.c  hid_event.h  hid_report_parser.c  hid_report_parser.h  idf_component.yml  main.c  ui.c  ui.h
main/boards/: board_c6_169.h  board_s3_round.h
test/host/: CMakeLists.txt  esp_log_mock.h  test_hid_event.c  test_hid_parser.c  test_main.c
